--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <div class="jumbotron p-3 mb-2 bg-secondary text-white">
         <h1 class="display-4">Welcome to Moonlight Falls</h1>
-        <p class="lead">Moonlight Falls is a semi-anarchic and magical survival game with PVP and PVE. Powered with Minetest Engine It has a good and stable modset with many different blocks and features that explore. Counts with a mixture of ethereal and natural biomes mapgen. And has a great team of builders/moderators/players who managed many different languages to interact with.
+        <p class="lead">Moonlight Falls is a semi-anarchic and magical survival game with PVP and PVE. Powered with Minetest Engine, it has a good and stable modset with many different blocks and features to explore. Counts with a mixture of ethereal and natural biomes mapgen. And has a great team of builders/moderators/players who manage many different languages to interact with.
         <hr class="my-4">
         <p>Join our community on discord and visit our world today!!!<p class="lead">
         <a class="btn btn-primary btn-lg" href="../moonlight-falls/about.html" role="button">Learn more</a>
