--- a/people.html
+++ b/people.html
@@ -172,7 +172,8 @@
           <p class="lead">Our community is thriving on Discord! Join now and immerse yourself in a world of endless possibilities. Stay up-to-date with the latest news and interact with players from all over the globe. Whether you want to engage in friendly banter or discuss the latest gaming strategies, our community has got you covered. We offer channels in multiple languages, round-the-clock music, and even some fun bots to keep you entertained. Don't wait any longer – join us now and experience the magic of Moonlight Falls!</p>
 
           <div class="col-md-5 order-md-1">
-            <a class="btn btn-primary btn-lg" href="https://discord.gg/42EAdV8zFX" role="button">Jump to Discord</a>
+            <a class="btn btn-primary btn-lg" href="https://discord.gg/42EAdV8zFX" target="_blank" role="button">Jump to Discord</a>
+
             <br>
             <br>
           </div>
