--- a/history.html
+++ b/history.html
@@ -16,7 +16,7 @@
 <body class="bg-light">
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="../moonlight-falls/images/logo.png" alt="logo" class="d-inline-block align-text-top"
@@ -95,7 +95,7 @@
   <!-- FOOTER -->
   <footer class="container">
     <p class="float-right"><a href="#">Back to top</a></p>
-    <p>© 2022 - 2023 Moonlight Falls. · <a href="https://discord.gg/42EAdV8zFX">Join to Discord</a> · <a
+    <p>© 2022 - 2023 Moonlight Falls. · <a href="https://discord.gg/42EAdV8zFX" target="_blank">Join to Discord</a> · <a
         href="https://www.minetest.net/downloads/">Get Minetest 4 Free</a> · <a
         href="https://www.kristovish.com//">About Kristovish</a></p>
   </footer>
