--- a/index.html
+++ b/index.html
@@ -92,11 +92,10 @@
     </div>
   </main>
 
-
   <!-- FOOTER -->
   <footer class="container">
     <p class="float-right"><a href="#">Back to top</a></p>
-    <p>© 2022 - 2023 Moonlight Falls. · <a href="https://discord.gg/42EAdV8zFX">Join to Discord</a> · <a
+    <p>© 2022 - 2023 Moonlight Falls. · <a href="https://discord.gg/42EAdV8zFX" target="_blank">Join to Discord</a> · <a
         href="https://www.minetest.net/downloads/">Get Minetest 4 Free</a> · <a
         href="https://www.kristovish.com//">About Kristovish</a></p>
   </footer>
@@ -112,9 +111,9 @@
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-  -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+-->
 </body>
 
 </html>
