--- a/history.html
+++ b/history.html
@@ -5,18 +5,25 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+  <!-- Custom CSS -->
+  <style>
+    .sites-promo-badge-container {
+      display: none !important;
+    }
+  </style>
+  <!-- Page title -->
   <title>Moonlight Falls Server</title>
+  <!-- Author -->
+  <meta name="author" content="Kristovish">
 </head>
 
 <body class="bg-light">
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="../moonlight-falls/images/logo.png" alt="logo" class="d-inline-block align-text-top"
