--- a/people.html
+++ b/people.html
@@ -5,18 +5,25 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+  <!-- Custom CSS -->
+  <style>
+    .sites-promo-badge-container {
+      display: none !important;
+    }
+  </style>
+  <!-- Page title -->
   <title>Moonlight Falls Server</title>
+  <!-- Author -->
+  <meta name="author" content="Kristovish">
 </head>
 
 <body class="bg-light">
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="../moonlight-falls/images/logo.png" alt="logo" class="d-inline-block align-text-top"
@@ -146,11 +153,18 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">Connect with Players Worldwide <br> <span class="text-muted">Stay Connected</span></h2>
-        <p class="lead">At Moonlight Falls, we have a diverse and inclusive community that spans the globe. Our community is moderated by a team of moderators from all over the world, who are identified by the "Moderator" role. Our moderators are fluent in several languages, so don't hesitate to reach out to them for assistance in your native language.
+        <h2 class="featurette-heading">Connect with Players Worldwide <br> <span class="text-muted">Stay
+            Connected</span></h2>
+        <p class="lead">At Moonlight Falls, we have a diverse and inclusive community that spans the globe. Our
+          community is moderated by a team of moderators from all over the world, who are identified by the "Moderator"
+          role. Our moderators are fluent in several languages, so don't hesitate to reach out to them for assistance in
+          your native language.
           <br>
           <br>
-          With a vast number of daily sign-ups, our community is thriving and growing rapidly. Whether you're a seasoned player or just getting started, you're sure to find something you'll love in Moonlight Falls. Explore our world, build architectural marvels, make new friends, and exchange experiences with players from all walks of life.
+          With a vast number of daily sign-ups, our community is thriving and growing rapidly. Whether you're a seasoned
+          player or just getting started, you're sure to find something you'll love in Moonlight Falls. Explore our
+          world, build architectural marvels, make new friends, and exchange experiences with players from all walks of
+          life.
         </p>
       </div>
       <div class="col-md-5">
@@ -169,10 +183,15 @@
         <div class="col-md-6">
           <hr class="featurette-divider">
           <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Our community is thriving on Discord! Join now and immerse yourself in a world of endless possibilities. Stay up-to-date with the latest news and interact with players from all over the globe. Whether you want to engage in friendly banter or discuss the latest gaming strategies, our community has got you covered. We offer channels in multiple languages, round-the-clock music, and even some fun bots to keep you entertained. Don't wait any longer – join us now and experience the magic of Moonlight Falls!</p>
+          <p class="lead">Our community is thriving on Discord! Join now and immerse yourself in a world of endless
+            possibilities. Stay up-to-date with the latest news and interact with players from all over the globe.
+            Whether you want to engage in friendly banter or discuss the latest gaming strategies, our community has got
+            you covered. We offer channels in multiple languages, round-the-clock music, and even some fun bots to keep
+            you entertained. Don't wait any longer – join us now and experience the magic of Moonlight Falls!</p>
 
           <div class="col-md-5 order-md-1">
-            <a class="btn btn-primary btn-lg" href="https://discord.gg/42EAdV8zFX" target="_blank" role="button">Jump to Discord</a>
+            <a class="btn btn-primary btn-lg" href="https://discord.gg/42EAdV8zFX" target="_blank" role="button">Jump to
+              Discord</a>
 
             <br>
             <br>
