--- a/people.html
+++ b/people.html
@@ -74,7 +74,9 @@
 
 
 
-
+  <div class="contenido" style="margin-top: 60px;">
+    <!-- contenido que sigue a la barra de navegación -->
+  </div>
 
 
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
