--- a/soon.html
+++ b/soon.html
@@ -66,6 +66,10 @@
   </nav>
 </header>
 
+<div class="contenido" style="margin-top: 60px;">
+  <!-- contenido que sigue a la barra de navegación -->
+</div>
+
 <main role="main">
 
   <div id="people" class="carousel slide" data-ride="carousel">
