--- a/gallery.html
+++ b/gallery.html
@@ -72,7 +72,9 @@
     </nav>
   </header>
 
-
+  <div class="contenido" style="margin-top: 60px;">
+    <!-- contenido que sigue a la barra de navegación -->
+  </div>
 
 
   <main role="main">
