--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
     </nav>
   </header>
 
-
+  <div class="contenido" style="margin-top: 60px;">
+    <!-- contenido que sigue a la barra de navegación -->
+  </div>
 
   <main role="main" class="container-fluid px-0 mx-0">
     <img src="images/land.png" class="img-fluid" alt="Responsive image">
