--- a/plantilla.html
+++ b/plantilla.html
@@ -74,7 +74,9 @@
     </header>
 
 
-
+    <div class="contenido" style="margin-top: 60px;">
+        <!-- contenido que sigue a la barra de navegación -->
+      </div>
 
 
     <!-- cuerpo  -->
