--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body class="bg-light">
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="../moonlight-falls/images/logo.png" alt="logo" class="d-inline-block align-text-top"
@@ -73,9 +73,7 @@
     </nav>
   </header>
 
-  <div class="contenido" style="margin-top: 60px;">
-    <!-- contenido que sigue a la barra de navegación -->
-  </div>
+
 
   <main role="main" class="container-fluid px-0 mx-0">
     <img src="images/land.png" class="img-fluid" alt="Responsive image">
