--- a/people.html
+++ b/people.html
@@ -23,7 +23,7 @@
 <body class="bg-light">
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="../moonlight-falls/images/logo.png" alt="logo" class="d-inline-block align-text-top"
