--- a/soon.html
+++ b/soon.html
@@ -22,7 +22,7 @@
 
 
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">
       <img src="../moonlight-falls/images/logo.png" alt="logo" class="d-inline-block align-text-top"
         style="max-width: 250px; height: auto; width: auto;">
