--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       <div class="container">
         <br>
         <h1 class="display-4">Welcome to Moonlight Falls</h1>
-        <p class="lead">Welcome to Moonlight Falls, the Minetest server that will transport you to a magical world full
+        <br>
+        <p class="lead">The Minetest server that will transport you to a magical world full
           of wonders! Explore our ethereal biomes, discover mythical and extinct creatures, and survive in an open world
           where the moon is your guide. With a perfect mix of PVP and PVE, you'll have to fight to survive in our
           semi-anarchic world and face off against other players. Our well-thought-out and stable modset will allow you
