--- a/about.html
+++ b/about.html
@@ -170,9 +170,9 @@
       <p class="float-right"><a href="#">Back to top</a></p>
       <p>© 2022 - 2023 Moonlight Falls. · <a href="https://discord.gg/42EAdV8zFX" target="_blank">Join to Discord</a> ·
         <a href="https://www.minetest.net/downloads/">Get Minetest 4 Free</a> · <a
-          href="https://www.kristovish.com//">About Kristovish</a></p>
+          href="https://www.kristovish.com//">About Kristovish</a> · <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Images licensed under Creative Commons</a></p>
     </footer>
-
+    
 
 
     <!-- Optional JavaScript; choose one of the two! -->
