--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
     </div>
   </main>
 
-  <!-- FOOTER -->
-  <footer class="container">
+   <!-- FOOTER -->
+   <footer class="container">
     <p class="float-right"><a href="#">Back to top</a></p>
-    <p>© 2022 - 2023 Moonlight Falls. · <a href="https://discord.gg/42EAdV8zFX" target="_blank">Join to Discord</a> · <a
-        href="https://www.minetest.net/downloads/">Get Minetest 4 Free</a> · <a
-        href="https://www.kristovish.com//">About Kristovish</a></p>
+    <p>© 2022 - 2023 Moonlight Falls. · <a href="https://discord.gg/42EAdV8zFX" target="_blank">Join to Discord</a> ·
+      <a href="https://www.minetest.net/downloads/">Get Minetest 4 Free</a> · <a
+        href="https://www.kristovish.com//">About Kristovish</a> · <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Images licensed under Creative Commons</a></p>
   </footer>
 
 
