--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <hr class="my-4">
         <h2>Join Moonlight Falls now!</h2>
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="../moonlight-falls/about.html" role="button">Learn more</a>
+          <a class="btn btn-primary btn-lg" href="https://www.kristovish.com/play/about_the_game" role="button">Learn more</a>
         </p>
         <br>
         <br>
