added licenses correction

--- a/gallery.html
+++ b/gallery.html
@@ -207,10 +207,9 @@
    <footer class="container">
     <p class="float-right"><a href="#">Back to top</a></p>
     <p>© 2022 - 2023 Moonlight Falls. · <a href="https://discord.gg/42EAdV8zFX" target="_blank">Join to Discord</a> ·
-      <a href="https://www.minetest.net/downloads/">Get Minetest 4 Free</a> · <a
-        href="https://www.kristovish.com//">About Kristovish</a> · <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Images licensed under Creative Commons</a></p>
+      <a href="https://www.minetest.net/downloads/">Get Minetest 4 Free</a> · <a href="https://www.kristovish.com//">About Kristovish</a> ·  <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Images licensed under Creative Commons</a> · MIT for code, CC-BY-SA 3.0 for content, media under various licenses. Font Awesome icons under CC-BY 4.0.</p>
   </footer>
-
+  
 
 
   <!-- Optional JavaScript; choose one of the two! -->
